fix: visibility icons edit date and field from view marchdays guest

--- a/gesfut/src/app/admin/match-day/list-match-days/list-match-days.component.scss
+++ b/gesfut/src/app/admin/match-day/list-match-days/list-match-days.component.scss
@@ -328,3 +328,12 @@ hr {
     grid-column: 1/13;
   }
 }
+
+.noAuth{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: var(--font-size-text);
+  color: var(--font-color);
+}
