--- a/gesfut/src/app/guest/recap/recap.component.scss
+++ b/gesfut/src/app/guest/recap/recap.component.scss
@@ -70,7 +70,8 @@ hr {
 .match{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
+  align-items: start;
   width: 100%;
   font-size: var(--font-size-text);
   margin: 0 auto;
@@ -79,8 +80,8 @@ hr {
 .status{
   font-size: var(--font-size-text);
   background-color: var(--terciary-color);
-  padding-left: 5px;
-  width: 13%;
+  padding:0px 5px;
+  width: auto !important;
   color: white;
 }
 
